src/OpenCvSharp/Internal/Interop/NativeMethods.ObjDetect.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_get_detector_scales_fill")]
        internal static partial int BarcodeDetectorGetDetectorScalesFill(IntPtr detector, float[] scales, int scaleCapacity, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_set_detector_scales")]
        internal static partial int BarcodeDetectorSetDetectorScales(IntPtr detector, float[] scales, int scaleCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_set_detector_scales")]
        internal static unsafe partial int BarcodeDetectorSetDetectorScales(IntPtr detector, float* scales, int scaleCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_default_params")]
        internal static partial int QRCodeDetectorArucoDefaultParams(out QRCodeDetectorArucoParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_create")]
        internal static partial int QRCodeDetectorArucoCreate(out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_create_with_params")]
        internal static partial int QRCodeDetectorArucoCreateWithParams(ref QRCodeDetectorArucoParamsNative parameters, out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_release_handle")]
        internal static partial void QRCodeDetectorArucoReleaseHandle(IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_get_detector_parameters")]
        internal static partial int QRCodeDetectorArucoGetDetectorParameters(IntPtr detector, out QRCodeDetectorArucoParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_set_detector_parameters")]
        internal static partial int QRCodeDetectorArucoSetDetectorParameters(IntPtr detector, ref QRCodeDetectorArucoParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_get_aruco_parameters")]
        internal static partial int QRCodeDetectorArucoGetArucoParameters(IntPtr detector, out ArucoDetectorParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_set_aruco_parameters")]
        internal static partial int QRCodeDetectorArucoSetArucoParameters(IntPtr detector, ref ArucoDetectorParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_detect")]
        internal static partial int QRCodeDetectorArucoDetect(IntPtr detector, IntPtr image, IntPtr points, out int detected);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_decode_length")]
        internal static partial int QRCodeDetectorArucoDecodeLength(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_decode_fill")]
        internal static unsafe partial int QRCodeDetectorArucoDecodeFill(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_detect_and_decode_length")]
        internal static partial int QRCodeDetectorArucoDetectAndDecodeLength(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_detect_and_decode_fill")]
        internal static unsafe partial int QRCodeDetectorArucoDetectAndDecodeFill(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_detect_multi")]
        internal static partial int QRCodeDetectorArucoDetectMulti(IntPtr detector, IntPtr image, IntPtr points, out int detected);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_decode_multi_count")]
        internal static partial int QRCodeDetectorArucoDecodeMultiCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_decode_multi_fill")]
        internal static unsafe partial int QRCodeDetectorArucoDecodeMultiFill(IntPtr detector, IntPtr image, IntPtr points, int* offsets, int offsetCapacity, byte* buffer, int bufferCapacity, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_detect_and_decode_multi_count")]
        internal static partial int QRCodeDetectorArucoDetectAndDecodeMultiCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_aruco_detect_and_decode_multi_fill")]
        internal static unsafe partial int QRCodeDetectorArucoDetectAndDecodeMultiFill(IntPtr detector, IntPtr image, IntPtr points, int* offsets, int offsetCapacity, byte* buffer, int bufferCapacity, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_encoder_default_params")]
        internal static partial int QRCodeEncoderDefaultParams(out QRCodeEncoderParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_encoder_create")]
        internal static partial int QRCodeEncoderCreate(ref QRCodeEncoderParamsNative parameters, out IntPtr encoder);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_encoder_release_handle")]
        internal static partial void QRCodeEncoderReleaseHandle(IntPtr encoder);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_encoder_encode")]
        internal static partial int QRCodeEncoderEncode(IntPtr encoder, byte[] encodedInfo, IntPtr qrcode);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_encoder_encode_structured_append_count")]
        internal static partial int QRCodeEncoderEncodeStructuredAppendCount(IntPtr encoder, byte[] encodedInfo, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_encoder_encode_structured_append_fill")]
        internal static partial int QRCodeEncoderEncodeStructuredAppendFill(IntPtr encoder, byte[] encodedInfo, IntPtr[] qrcodes, int qrcodeCapacity, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_create")]
        internal static partial int FaceDetectorYNCreate(byte[] model, byte[] config, int inputWidth, int inputHeight, float scoreThreshold, float nmsThreshold, int topK, int backendId, int targetId, out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_create_from_buffer")]
        internal static partial int FaceDetectorYNCreateFromBuffer(byte[] framework, byte* modelBuffer, int modelBufferLength, byte* configBuffer, int configBufferLength, int inputWidth, int inputHeight, float scoreThreshold, float nmsThreshold, int topK, int backendId, int targetId, out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_release_handle")]
        internal static partial void FaceDetectorYNReleaseHandle(IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_set_input_size")]
        internal static partial int FaceDetectorYNSetInputSize(IntPtr detector, int width, int height);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_get_input_size")]
        internal static partial int FaceDetectorYNGetInputSize(IntPtr detector, out int width, out int height);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_set_score_threshold")]
        internal static partial int FaceDetectorYNSetScoreThreshold(IntPtr detector, float scoreThreshold);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_get_score_threshold")]
        internal static partial int FaceDetectorYNGetScoreThreshold(IntPtr detector, out float scoreThreshold);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_set_nms_threshold")]
        internal static partial int FaceDetectorYNSetNMSThreshold(IntPtr detector, float nmsThreshold);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_get_nms_threshold")]
        internal static partial int FaceDetectorYNGetNMSThreshold(IntPtr detector, out float nmsThreshold);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_set_top_k")]
        internal static partial int FaceDetectorYNSetTopK(IntPtr detector, int topK);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_get_top_k")]
        internal static partial int FaceDetectorYNGetTopK(IntPtr detector, out int topK);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_detector_yn_detect")]
        internal static partial int FaceDetectorYNDetect(IntPtr detector, IntPtr image, IntPtr faces, out int result);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_recognizer_sf_create")]
        internal static partial int FaceRecognizerSFCreate(byte[] model, byte[] config, int backendId, int targetId, out IntPtr recognizer);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_recognizer_sf_create_from_buffer")]
        internal static partial int FaceRecognizerSFCreateFromBuffer(byte[] framework, byte* modelBuffer, int modelBufferLength, byte* configBuffer, int configBufferLength, int backendId, int targetId, out IntPtr recognizer);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_recognizer_sf_release_handle")]
        internal static partial void FaceRecognizerSFReleaseHandle(IntPtr recognizer);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_recognizer_sf_align_crop")]
        internal static partial int FaceRecognizerSFAlignCrop(IntPtr recognizer, IntPtr sourceImage, IntPtr faceBox, IntPtr alignedImage);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_recognizer_sf_feature")]
        internal static partial int FaceRecognizerSFFeature(IntPtr recognizer, IntPtr alignedImage, IntPtr faceFeature);
